...
) {
    OutlinedTextField(
        value = text,
        onValueChange = { onTextChange(it) },
        label = { Text(stringResource(labelName), color = White) },
        singleLine = true,
        modifier = Modifier.testTag("TextInput")
            .fillMaxWidth(),
        colors = OutlinedTextFieldDefaults.colors(
            focusedTextColor = Grey,
            focusedLabelColor = White,
            unfocusedTextColor = Grey,
            unfocusedLabelColor = White,
...
        Text(
            text = "* $textError",
            color = MaterialTheme.colorScheme.error,
            style = MaterialTheme.typography.bodySmall,
            textAlign = TextAlign.Start,
            modifier = Modifier.fillMaxWidth()
                .padding(start = 8.dp,top = 4.dp).testTag("TextError")
        )
    }
}

@Composable
fun CinemaxEmailField(
...
) {
    OutlinedTextField(
        value = text,
        onValueChange = { onTextChange(it) },
        label = { Text(stringResource(labelName), color = White) },
        singleLine = true,
        modifier = Modifier.testTag("EmailInput")
            .fillMaxWidth(),
        colors = OutlinedTextFieldDefaults.colors(
            focusedTextColor = Grey,
            focusedLabelColor = White,
            unfocusedTextColor = Grey,
            unfocusedLabelColor = White,
...
        Text(
            text = "* $textError",
            color = MaterialTheme.colorScheme.error,
            style = MaterialTheme.typography.bodySmall,
            textAlign = TextAlign.Start,
            modifier = Modifier.fillMaxWidth()
                .padding(start = 8.dp,top = 4.dp).testTag("EmailError")
        )
    }
}

@Composable
fun CinemaxPasswordField(
...
        trailingIcon = {
            val image = if (passwordVisibility) Icons.Filled.Visibility else Icons.Filled.VisibilityOff
            IconButton(onClick = { passwordVisibility = !passwordVisibility }) {
                Icon(imageVector = image, contentDescription = null, tint = Grey)
            }
        },
        modifier = Modifier.fillMaxWidth().testTag("PasswordInput"),
        colors = OutlinedTextFieldDefaults.colors(
            focusedTextColor = Grey,
            focusedLabelColor = White,
            unfocusedTextColor = Grey,
            unfocusedLabelColor = White,
            errorTextColor = Grey,
...
    if(passwordError!=null){
        Text(
            text = "* $passwordError" ,
            color = MaterialTheme.colorScheme.error,
            style = MaterialTheme.typography.bodySmall,
            textAlign = TextAlign.Start,
            modifier = Modifier.testTag("PasswordError")
                .fillMaxWidth()
                .padding(start = 8.dp, top = 4.dp)
        )
    }
}

...
