...
        colors = ButtonDefaults.buttonColors(
            containerColor = BlueAccent,
            disabledContainerColor = Soft,
            contentColor = White,
            disabledContentColor = Grey
        ),
        modifier = Modifier.testTag("AuthButton")
            .fillMaxWidth()
            .height(56.dp),
        shape = CircleShape
    ) {
        Text(text = stringResource(id = title))
    }
...
